--- a/_includes/N-status.html
+++ b/_includes/N-status.html
@@ -4,6 +4,10 @@ We are addressing a mechanical problem on a work train in the tunnel connecting 
 
 Expect delays on southbound [Q] trains while they share the track with rerouted trains.
 
+Additional Service Changes
+
+The last stop on northbound [N] trains will be Court St where they will turn back for southbound service.  
+
 Boarding Change
 
 At Canal St, board [N][Q] trains on the [R][W] platform.
