--- a/_includes/W-status.html
+++ b/_includes/W-status.html
@@ -1,8 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Southbound [R]‌ trains are running via the [Q] line from <b>Canal St</b> to <b>DeKalb Av</b>.</p><p></p><p><b>Whitehall St-South Ferry</b>-bound [W] trains are delayed.</p>We are addressing a signal problem at Whitehall St-South Ferry.
-
-Expect delays in southbound [Q] train service as they share tracks with these rerouted trains.
-
-Southbound [R]  trains will arrive on the lower level at Canal St.</div><div class="line-alert"><p>Take the [N] or [R] instead</p>[W] service operates weekday rush hours, middays and evenings.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Take the [N] or [R] instead</p>[W] service operates weekday rush hours, middays and evenings.
 
 
 
