--- a/_includes/J-status.html
+++ b/_includes/J-status.html
@@ -1,8 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>5 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[J] trains are running with delays in both directions after we restored a loss of third rail power at <b>85 St-Forest Pkwy</b>.</p>Planned Service Reminder:
-
-Planned - Part Suspended
-No [J] between Crescent St, Brooklyn and Broad St, Manhattan
-May 25 - 27, Sat 3 AM to Mon 10 PM (includes Memorial Day)</div><div class="line-alert"><p>Subways are running on a Sunday Schedule</p></div><div class="line-alert"><p>No [J] between <b>Crescent St</b>, Brooklyn and <b>Broad St</b>, Manhattan</p>[J] runs between Jamaica Center and Crescent St, the last stop.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>4 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Subways are running on a Sunday Schedule</p></div><div class="line-alert"><p>No [J] between <b>Crescent St</b>, Brooklyn and <b>Broad St</b>, Manhattan</p>[J] runs between Jamaica Center and Crescent St, the last stop.
 
 [M] replaces [J] between Myrtle Av and Broad St.
 
