--- a/_includes/J-status.html
+++ b/_includes/J-status.html
@@ -1,21 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>4 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Subways are running on a Sunday Schedule</p></div><div class="line-alert"><p>No [J] between <b>Crescent St</b>, Brooklyn and <b>Broad St</b>, Manhattan</p>[J] runs between Jamaica Center and Crescent St, the last stop.
-
-[M] replaces [J] between Myrtle Av and Broad St.
-
-shuttle bus icon Free shuttle buses run along two routes:
-1. Local shuttle buses make all [J] stops between Crescent St and Myrtle Av
-2. Express shuttle buses operate between Crescent St and Myrtle Av, stopping at Broadway Junction
-Transfer between [J] and shuttle bus icon buses at Crescent St
-Transfer between [M] and shuttle bus icon buses at Myrtle Av
-For Lower Manhattan, take the [A][C]. Transfer at Broadway Junction shuttle bus icon.
-
-When exiting at Crescent St, Broadway Junction [A][C], or Myrtle Av, get a GO Ticket to re-enter the subway.
-LIRR will also accommodate subway riders traveling between Brooklyn and Queens for no additional cost at Atlantic Terminal, Nostrand Av, East New York and Jamaica. Check LIRR service and schedules.
-
-What's happening?
-We're replacing tracks
-
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div><div class="line-alert"><p>Manhattan-bound [J][Z] skips <b>75 St-Elderts Ln</b></p>Use nearby Cypress Hills or 85 St-Forest Pkwy stations.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Subways are running on a Sunday Schedule</p></div><div class="line-alert"><p>Manhattan-bound [J][Z] skips <b>75 St-Elderts Ln</b></p>Use nearby Cypress Hills or 85 St-Forest Pkwy stations.
 
 Additional travel alternatives:
 For service to this station, take the [J] or [Z] to Cypress Hills and transfer to a Jamaica Center-bound [J] or [Z].
