--- a/_includes/L-status.html
+++ b/_includes/L-status.html
@@ -1,21 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Transfers between the [L] at <b>6 Av</b> and downtown [F][M] at <b>14 St</b> will be made via street level using your MetroCard or OMNY</p>Exit and re-enter station and turnstiles for free using your MetroCard or OMNY.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Transfers between the [L] at <b>6 Av</b> and downtown [F][M] at <b>14 St</b> will be made via street level using your MetroCard or OMNY</p>Exit and re-enter station and turnstiles for free using your MetroCard or OMNY.
 
 What's happening?
-We're replacing the stairway between the [L] platform and the downtown [F][M] platform</div><div class="line-alert"><p>Subways are running on a Sunday Schedule</p></div><div class="line-alert"><p>In Brooklyn, no [L] between <b>Myrtle-Wyckoff Avs</b> and <b>Canarsie-Rockaway Pkwy</b></p>[L] service operates between 8 Av and Myrtle-Wyckoff Avs, every 8 minutes days and evenings, every 12 minutes overnight.
-
-shuttle bus icon Free shuttle buses run along two routes:
-1. Local shuttle buses make all [L] stops between Myrtle-Wyckoff Avs and Rockaway Pkwy
-2. Express shuttle buses operate between Myrtle-Wyckoff Avs and Rockaway Pkwy, stopping at Broadway Junction
-Transfer between [L] and shuttle bus icon shuttle buses at Myrtle-Wyckoff Avs accessibility icon | [M]
-For Manhattan, take the [A][C] or [4], transfer between shuttle buses and trains at Broadway Junction for [A][C] or Junius St/Livonia Av [4] *.
-
-[M] service also operates all weekend between Metropolitan Av and Delancey St-Essex St, and via the [J] to/from Broad St.
-
-When exiting at Myrtle-Wyckoff Avs [L][M], Broadway Junction, [A][C] or Junius St/Livonia Av get a GO Ticket to re-enter the subway.
-
-*[4] runs to/from New Lots Av all weekend.
-
-What's happening?
-We're replacing tracks
-
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.,</div></div>
+We're replacing the stairway between the [L] platform and the downtown [F][M] platform</div><div class="line-alert"><p>Subways are running on a Sunday Schedule</p></div></div>
