--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,29 +1,6 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn, Manhattan-bound [F] skips <b>Avenue U</b></p>For service to this station, take the [F] to Kings Hwy and transfer to a Coney Island-bound [F].
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn, Manhattan-bound [F] skips <b>Avenue U</b></p>For service to this station, take the [F] to Kings Hwy and transfer to a Coney Island-bound [F].
 
 For service from this station, take the [F] to Avenue X and transfer to a Manhattan-bound [F].
 
 What's happening?
-We're modernizing signals on the Culver Line</div><div class="line-alert"><p>In Queens, late-night Manhattan-bound [E][F] local skip <b>65 St</b>, <b>Northern Blvd</b>, <b>46 St</b>, <b>Steinway St</b> and <b>36 St</b></p>For service to these stations, take the [E] * or [F] to 21 St-Queensbridge and transfer to a Jamaica-bound local train.
-
-For service from these stations, take a train to Roosevelt Av and transfer to a Manhattan-bound [E] or [F].
-
-*[E] is running via the [F] between Queens and Manhattan.
-
-Schedule reminder: [E][F] run express in Queens days and evenings
-
-What's happening?
-Track maintenance</div><div class="line-alert"><p>In Brooklyn, no [F] between <b>Kings Hwy</b> and <b>Coney Island-Stillwell Av</b></p>[F] trains run between Jamaica-179 St and Kings Hwy, the last stop.
-
-shuttle bus icon Free shuttle buses run between Kings Hwy and Coney Island-Stillwell Av.
-Transfer between trains and shuttle bus icon buses at Kings Hwy.
-For direct service between Coney Island-Stillwell Av and Manhattan/Downtown Brooklyn, take the [D][N] or [Q].
-
-Transfer stations:
-34 St-Herald Sq accessibility icon | [D][F][N][Q]
-4 Av-9 St [F][N]
-Kings Hwy [F] and shuttle bus icon
-Coney Island-Stillwell Av accessibility icon | [D] [N][Q] and shuttle bus icon
-What's happening?
-We're modernizing signals on the Culver Line
-
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
+We're modernizing signals on the Culver Line</div></div>
