--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,4 +1,38 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>The last stop for some ‌[F]‌ trains headed toward ‌Coney Island‌ is ‌Church Av‌</p><p>These trains skip <b>4 Av-9 St</b>, <b>15 St-Prospect Park</b> and <b>Fort Hamilton Pkwy</b></p>For skipped stations or continuing service, take the [G] or a Coney Island-bound [F] instead.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>4 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Coney Island-bound [F] and Metropolitan Ave-bound [M] trains are disrupted between Queens and Manhattan. <br></p>[F] Service Changes
+
+Some southbound [F] trains are running on the [E] line from Jackson Hts-Roosevelt Av to Queens Plaza, then along the [G] line to Bergen St.
+
+Some southbound [F] trains are running on the [E] line from Jackson Hts-Roosevelt Av to W 4 St-Wash Sq.
+
+Some southbound [F] trains are running express from 57 St to W 4 St-Wash Sq.
+
+
+[M] Service Changes
+
+The last stop on 71 Av-bound [M] trains will be Chambers St on the [J].
+
+Some southbound [M] trains are running on the [E] line from 5 Av/53 St to W 4 St-Wash Sq.
+
+[C][E][M] trains are running with delays while they share the same track with rerouted trains.
+
+Emergency teams are responding to someone who was struck by a train at 34 St-Herald Sq.</div><div class="line-alert"><p>Coney Island-bound [F] and Metropolitan Ave-bound [M] trains are disrupted between Queens and Manhattan. <br></p>[F] Service Changes
+
+Some southbound [F] trains are running on the [E] line from Jackson Hts-Roosevelt Av to Queens Plaza, then along the [G] line to Bergen St.
+
+Some southbound [F] trains are running on the [E] line from Jackson Hts-Roosevelt Av to W 4 St-Wash Sq.
+
+Some southbound [F] trains are running express from 57 St to W 4 St-Wash Sq.
+
+
+[M] Service Changes
+
+The last stop on 71 Av-bound [M] trains will be Chambers St on the [J].
+
+Some southbound [M] trains are running on the [E] line from 5 Av/53 St to W 4 St-Wash Sq.
+
+[C][E][M] trains are running with delays while they share the same track with rerouted trains.
+
+Emergency teams are responding to someone who was struck by a train at 34 St-Herald Sq.</div><div class="line-alert"><p>The last stop for some ‌[F]‌ trains headed toward ‌Coney Island‌ is ‌Church Av‌</p><p>These trains skip <b>4 Av-9 St</b>, <b>15 St-Prospect Park</b> and <b>Fort Hamilton Pkwy</b></p>For skipped stations or continuing service, take the [G] or a Coney Island-bound [F] instead.
 Transfer at Smith-9 Sts, 7 Av accessibility icon or Church Av accessibility icon
 [F] service between Church Av  and Coney Island operates less frequently.
 
