--- a/_includes/6-status.html
+++ b/_includes/6-status.html
@@ -2,5 +2,5 @@
 What's happening?
 Signal maintenance
 
-accessibility icon If you're on a train terminating at 3 Av-138 St, an accessible transfer is available at 125 St accessibility icon to the next Pelham Bay Park-bound [6].</div><div class="line-alert"><p>In the Bronx, Manhattan-bound express [6X] runs local from <b>Parkchester</b> to <b>3 Av-138 St</b></p>What's happening?
+accessibility icon If you're on a train terminating at 3 Av-138 St, an accessible transfer is available at 125 St accessibility icon to the next Pelham Bay Park-bound [6].</div><div class="line-alert"><p>In the Bronx, Pelham Bay Park-bound express [6X] runs local from <b>3 Av-138 St</b> to <b>Parkchester</b></p>What's happening?
 Signal maintenance</div></div>
