--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -11,9 +11,22 @@ For service from these stations, take a train to Roosevelt Av and transfer to a 
 Schedule reminder: [E][F] skip these stations in Queens days and evenings.
 
 What's happening?
-Track maintenance</div><div class="line-alert"><p>In Brooklyn, Manhattan-bound [F] skips <b>Avenue U</b></p>For service to this station, take the [F] to Kings Hwy and transfer to a Coney Island-bound [F].
+Track maintenance</div><div class="line-alert"><p>In Brooklyn, no [F] between <b>Church Av</b> and <b>Coney Island-Stillwell Av</b></p>[F] runs between Jamaica-179 St and Church Av, the last stop.
 
-For service from this station, take the [F] to Avenue X and transfer to a Manhattan-bound [F].
+shuttle bus icon Free B90 shuttle buses provide alternate service between Church Av and Coney Island-Stillwell Av.
 
+For direct service between Manhattan/Downtown Brooklyn and Coney Island, take the [D][N] or [Q] instead.
+
+For W 8 St-NY Aquarium, take the [Q] instead.
+
+When exiting Church Av or Coney Island-Stillwell Av, get a GO ticket for re-entry into the subway.
+
+Manhattan transfer stations:
+34 St-Herald Sq accessibility icon | [D][F] and [N][Q]
+Brooklyn transfer stations:
+Atlantic Av-Barclays Ctr accessibility icon | [D][N][Q]
+4 Av-9 St [F] and [N]
+Church Av accessibility icon | [F] and shuttle bus icon
+Coney Island-Stillwell Av accessibility icon | [D][N][Q] and shuttle bus icon
 What's happening?
 We're modernizing signals on the Culver Line</div></div>
