--- a/_includes/2-status.html
+++ b/_includes/2-status.html
@@ -1,4 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Passageway between <b>14 St</b> [1][2][3] and <b>14 St</b> [F][M] stations is closed</p>Free OMNY/MetroCard out-of-station transfer is available between 7 Av and 6 Av.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>5 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Passageway between <b>14 St</b> [1][2][3] and <b>14 St</b> [F][M] stations is closed</p>Free OMNY/MetroCard out-of-station transfer is available between 7 Av and 6 Av.
 Exit the station, walk along 14 St, and swipe/tap back in to transfer to your next train.
 
 Note: No [L] service in Manhattan during this time, and special [M] service runs days and evenings in Manhattan.
@@ -11,7 +11,14 @@ Transfer between trains and shuttle bus icon buses at Franklin Av or Nostrand Av
 What's happening?
 Structural maintenance
 
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div><div class="line-alert"><p>In the Bronx, Manhattan-bound [2] skips <strong>E Tremont Av‌</strong>, <b>174 St</b>, <b>Freeman St</b>, <b>Simpson St</b>, <b>Intervale Av</b>, <b>Prospect Av</b> and <b>Jackson Av</b></p>For service to these stations, take the [2] to 149 St-Grand Concourse and transfer to an uptown [2][5].
+accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div><div class="line-alert"><p>In Manhattan, uptown [2] local skips <b>Franklin St</b>, <b>Canal St</b>, <b>Houston St</b>, <strong>Christopher St</strong>, <b>18 St</b>, <b>23 St</b> and <b>28 St</b></p>For service to these stations, take the [2] to 14 St or 34 St-Penn Station and transfer to a downtown [1] or [2] local.
+
+For service from these stations, take the [1] or [2] to 14 St or Chambers St and transfer to an uptown [2].
+
+Schedule reminder: [2] skips these stations days and evenings.
+
+What's happening?
+Structural maintenance</div><div class="line-alert"><p>In the Bronx, Manhattan-bound [2] skips <strong>E Tremont Av‌</strong>, <b>174 St</b>, <b>Freeman St</b>, <b>Simpson St</b>, <b>Intervale Av</b>, <b>Prospect Av</b> and <b>Jackson Av</b></p>For service to these stations, take the [2] to 149 St-Grand Concourse and transfer to an uptown [2][5].
 
 For service from these stations, take the [2] or [5] to E 180 St accessibility icon and transfer to a Manhattan-bound [2].
 
@@ -23,4 +30,11 @@ Reminder: Overnight [5] service operates between Dyre Av and E 180 St.
 What's happening?
 Structural maintenance
 
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
+accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div><div class="line-alert"><p>In Manhattan, downtown [2] local skips <b>86 St</b> and <b>79 St</b></p>For service to these stations, take the [2] to 72 St and transfer to an uptown [1] or [2] local.
+
+For service from these stations, take the [1] or [2] to 96 St and transfer to a downtown [2].
+
+Schedule reminder: [2] skips these stations days and evenings.
+
+What's happening?
+Structural maintenance</div></div>
