--- a/_includes/J-status.html
+++ b/_includes/J-status.html
@@ -1,4 +1,13 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>No [J] between <b>Crescent St</b>, Brooklyn and <b>Jamaica Center-Parsons/Archer</b>, Queens</p>[J] runs between Broad St and Crescent St, the last stop.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>There are no [J][M] trains between <b>Delancey St-Essex St</b> and <b>Marcy Av</b> while we replace rails near <b>Marcy Av</b>.</p>[J] trains are running in two sections:
+Between Crescent St and Marcy Av, and
+Between Broad St and Delancey St-Essex St.
+[M] trains are running in two sections:
+Between 96 St and 2 Av [F], and
+Between Middle Village-Metropolitan Av and Myrtle Av.
+As an alternative between Manhattan and Brooklyn, take [A] trains or B39 buses.
+
+Planned work reminder:
+This weekend, [M] service is extended to the 96 St [Q] station.</div><div class="line-alert"><p>No [J] between <b>Crescent St</b>, Brooklyn and <b>Jamaica Center-Parsons/Archer</b>, Queens</p>[J] runs between Broad St and Crescent St, the last stop.
 
 shuttle bus icon Free J90 shuttle buses make stops between Crescent St and 121 St and connect with the [E] at Jamaica-Van Wyck.
 Transfer between [J] and shuttle bus icon buses at Crescent St
