--- a/_includes/C-status.html
+++ b/_includes/C-status.html
@@ -1,12 +1,1 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Manhattan, downtown [C] skips <b>50 St</b>, <b>23 St</b> and <b>Spring St</b></p>For service to these stations, take the [C] to 42 St-Port Authority Bus Terminal, 14 St or Canal St and transfer to an uptown [C] or [E].
-
-For service from 50 St, take the [E] to 42 St-Port Authority accessibility icon and transfer to the [C].
-
-For service from 23 St and Spring St, take the [C] or [E] to 34 St-Penn Station or W 4 St-Wash Sq and transfer to a downtown [C].
-
-Reminder: [C] trains do not run overnight.
-
-What's happening?
-We're making structural improvements
-
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [A][C] trains are running with delays after we moved a train that had its brakes activated near <b>Lafayette Av</b>.</p>Northbound [A] trains have resumed making scheduled express stops.</div></div>
