--- a/_includes/3-status.html
+++ b/_includes/3-status.html
@@ -1,22 +1,7 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Passageway between <b>14 St</b> [1][2][3] and <b>14 St</b> [F][M] stations is closed</p>Free OMNY/MetroCard out-of-station transfer is available between 7 Av and 6 Av.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [2][3] trains are running with delays after EMS responded to someone in need of medical assistance on a train at <b>Times Sq-42 St</b>.</p></div><div class="line-alert"><p>Passageway between <b>14 St</b> [1][2][3] and <b>14 St</b> [F][M] stations is closed</p>Free OMNY/MetroCard out-of-station transfer is available between 7 Av and 6 Av.
 Exit the station, walk along 14 St, and swipe/tap back in to transfer to your next train.
 
 Note: No [L] service in Manhattan during this time, and special [M] service runs days and evenings in Manhattan.
 
 What's happening?
-We're making accessibility improvements</div><div class="line-alert"><p>No [3] service between <b>Chambers St</b>, Manhattan and <b>New Lots Av</b>, Brooklyn</p>[3] runs in Manhattan between Harlem-148 St and Chambers St, then via the [1] to Rector St, the last stop.
-
-In Brooklyn, [2] runs via the [3] between Franklin Av and Crown Hts-Utica Av, the last stop.
-
-[4] runs to/from New Lots Av all weekend.
-
-Travel Alternatives:
-For service between Chambers St and Nevins St, take the [2].
-
-For service between Nevins St and Crown Hts-Utica Av, take the [2] or [4].
-
-For service between Crown Hts-Utica Av and New Lots Av, take the [4].
-Transfer between trains at Chambers St accessibility icon [2][3], Atlantic Av accessibility icon [2][4] or Utica Av accessibility icon [2][4]
-
-What's happening?
-Structural maintenance</div></div>
+We're making accessibility improvements</div></div>
