--- a/_includes/4-status.html
+++ b/_includes/4-status.html
@@ -1,20 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[4] train service:</p><p>Southbound [4] trains will end at <b>167 St</b>. </p><p>These trains will run express from <b>167 St</b> to <b>Burnside Av</b> to provide northbound service.</p><p style="min-height:10px"></p><p style="min-height:10px"></p>Northbound [4] trains will end at 138 St-Grand Concourse.
-
-What's happening?
-Emergency teams are responding to someone who was struck by a train at 161 St-Yankee Stadium.
-
-Travel Alternatives:
-For northbound service to the Bronx, consider taking a [D] train.
-
-Listen for announcements to hear how your train will operate.</div><div class="line-alert"><p>[4] train service:</p><p>Southbound [4] trains will end at <b>167 St</b>. </p><p>These trains will run express from <b>167 St</b> to <b>Burnside Av</b> to provide northbound service.</p><p style="min-height:10px"></p><p style="min-height:10px"></p>Northbound [4] trains will end at 138 St-Grand Concourse.
-
-What's happening?
-Emergency teams are responding to someone who was struck by a train at 161 St-Yankee Stadium.
-
-Travel Alternatives:
-For northbound service to the Bronx, consider taking a [D] train.
-
-Listen for announcements to hear how your train will operate.</div><div class="line-alert"><p>Transfers between the ‌[4] and [B][D] at <b>161 St-Yankee Stadium</b> will be made out-of-station via the street using OMNY or MetroCard</p>Exit and re-enter the station and turnstiles for free with your OMNY or MetroCard.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[4] trains are running with delays in both directions after emergency teams responded to someone who was struck by a train at <b>161 St-Yankee Stadium</b>. </p>[4] trains have resumed making scheduled stops in both directions.</div><div class="line-alert"><p>Transfers between the ‌[4] and [B][D] at <b>161 St-Yankee Stadium</b> will be made out-of-station via the street using OMNY or MetroCard</p>Exit and re-enter the station and turnstiles for free with your OMNY or MetroCard.
 
 What's happening?
 We're replacing the stairs and escalators between the [4] and [B][D] mezzanines</div></div>
