--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,4 +1,21 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn, no [F] between <b>Jay St-MetroTech</b> and <b>Church Av</b></p>[F] service operates in two sections:
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>No Jamaica-bound [F] service at <b>57 St</b>, <b>Lexington Av/63 St</b>, <b>Roosevelt Island</b>, and <b>21 St-Queensbridge</b></p>Jamaica-bound [F] trains are rerouted via the [E] after 47-50 Sts-Rockefeller Ctr to Jackson Hts-Roosevelt Av.
+
+Travel Alternatives:
+For service to 57 St, take the Jamaica-bound [F] to the nearby 5 Av/53 St [E] station. Or, transfer at 34 St-Herald Sq accessibility icon to an uptown [N] or [Q] for service to nearby 57 St-7 Av.
+
+For service to Lexington Av/63 St, take the [Q] * via transfer at 34 St-Herald Sq accessibility icon.
+
+For service to Roosevelt Island and 21 St-Queensbridge, take the [F] to Jackson Hts-Roosevelt Av accessibility icon and transfer to a Coney Island-bound [F].
+
+For service from these stations, take the [F] to 47-50 Sts-Rockefeller Ctr accessibility icon and transfer to a Jamaica-bound [F].
+
+*There is reduced [Q] service to 96 St until 12 AM.
+
+Travel tip:
+For 21 St-Queensbridge, consider nearby Queens Plaza accessibility icon.
+
+What's happening?
+Urgent track maintenance</div><div class="line-alert"><p>In Brooklyn, no [F] between <b>Jay St-MetroTech</b> and <b>Church Av</b></p>[F] service operates in two sections:
 1. Between Jamaica-179 St and Jay St-MetroTech
 (Manhattan [F] begins service at the Hoyt-Schermerhorn Sts [A][C] station)
 2. Between Church Av and Coney Island-Stillwell Av
