--- a/_includes/1-status.html
+++ b/_includes/1-status.html
@@ -8,9 +8,9 @@ For service from this station, take an uptown [1] or [2] to 96 St and transfer t
 Reminder: [2] runs local in Manhattan only during late nights.
 
 What's happening?
-Structural maintenance</div><div class="line-alert"><p>In the Bronx and Upper Manhattan, downtown [1] skips <b>238 St</b>, <b>231 St</b> and <b>Marble Hill-225 St</b></p>For service to these stations, take the [1] to 215 St and transfer to an uptown [1].
+Structural maintenance</div><div class="line-alert"><p>In the Bronx and Upper Manhattan, downtown [1] skips <b>238 St</b>, <b>231 St</b> and <b>Marble Hill-225 St</b></p>For service to these stations, take the Bx9 bus or take the [1] to 215 St and transfer to an uptown [1].
 
-For service from these stations, take the Bx9 bus.
+For service from these stations, take an uptown train to 242 St for downtown service.
 
 What's happening?
 Track maintenance
