--- a/_includes/1-status.html
+++ b/_includes/1-status.html
@@ -12,6 +12,9 @@ Structural maintenance</div><div class="line-alert"><p>In the Bronx and Upper Ma
 
 For service from these stations, take an uptown train to 242 St for downtown service.
 
+Travel tip:
+For service from Marble Hill-225 St, consider taking the Bx7 bus and transfer to the [1] at 215 St.
+
 What's happening?
 Track maintenance
 
