--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,26 +1,1 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn, no [F] between <b>Jay St-MetroTech</b> and <b>Church Av</b></p>[F] service operates in two sections:
-1. Between Jamaica-179 St and Jay St-MetroTech
-(Manhattan [F] begins service at the Hoyt-Schermerhorn Sts [A][C] station)
-2. Between Church Av and Coney Island-Stillwell Av
-
-shuttle bus icon Free shuttle buses run between Jay St-MetroTech and Church Av.
-
-For 4 Av-9 St, take the [R] (until 11:45 PM) or a late night [D][N] local.
-Transfer between [A][F][R] * and shuttle bus icon buses at Jay St-MetroTech accessibility icon.
-Transfer between [D][N] local, [R] * and shuttle bus icon buses at 4 Av-9 St.
-Transfer between [F] and shuttle bus icon buses at Church Av accessibility icon.
-When exiting Jay St-MetroTech, 4 Av-9 St or Church Av, get a GO ticket for re-entry into the subway.
-
-Note: No [G] service between Bedford-Nostrand Avs and Church Av during this time.
-
-*No [R] service at Jay St-MetroTech or 4 Av-9 St after 11:45 PM
-
-What's happening?
-Fastrack maintenance</div><div class="line-alert"><p>In Queens, Manhattan-bound [E][F] local skip <b>65 St</b>, <b>Northern Blvd</b>, <b>46 St</b>, <b>Steinway St</b> and <b>36 St</b></p>For service to these stations, take the [E] * or [F] to 21 St-Queensbridge and transfer to a Jamaica-bound local train.
-
-For service from these stations, take a train to Roosevelt Av and transfer to a Manhattan-bound [E] or [F].
-
-*Manhattan-bound [E] runs via the [F] from 21 St-Queensbridge to W 4 St-Wash Sq. 
-
-What's happening?
-Track maintenance</div></div>
+<h2 class="lead text-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-check-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>Good Service</h2>
