--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,4 +1,16 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Brooklyn, no [F] between <b>Jay St-MetroTech</b> and <b>Church Av</b></p>[F] service operates in two sections:
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>There is no [F] service in either direction between <b>Coney Island-Stillwell Av</b> and <b>Church Av</b>.</p>What's Happening?
+
+We are addressing a signal problem near Church Av.
+
+Planned Work Reminder
+
+There is no [F] service in either direction between Jay St-MetroTech and Church Av.
+
+There is no [G] service in either direction between Bedford-Nostrand Avs and Church Av.
+
+Travel Alternatives
+
+Use free shuttle buses replacing [F][G] service in Brooklyn.</div><div class="line-alert"><p>In Brooklyn, no [F] between <b>Jay St-MetroTech</b> and <b>Church Av</b></p>[F] service operates in two sections:
 1. Between Jamaica-179 St and Jay St-MetroTech
 (Manhattan [F] begins service at the Hoyt-Schermerhorn Sts [A][C] station)
 2. Between Church Av and Coney Island-Stillwell Av
