--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -5,8 +5,10 @@ Southbound [F] trains are running on the [E] line from Jackson Hts-Roosevelt Av 
 Some southbound [F] trains will end at 21 St-Queensbridge or Queens Plaza.
 Northbound:
 Northbound [D] trains are running on the [C] line from W 4 St-Wash Sq to 59 St-Columbus Circle.
-Northbound [F] trains are running on the [E] line from W 4 St-Wash Sq to Jackson Hts-Roosevelt Av. At W 4 St-Wash Sq, board northbound [D][F] trains on the upper level.
+Northbound [F] trains are running on the [E] line from W 4 St-Wash Sq to Jackson Hts-Roosevelt Av.
 Expect delays in [A][E] train service in both directions while rerouted trains share tracks.
+
+At W 4 St-Wash Sq, board all [D][F] trains on the upper level.
 
 Travel Alternatives:
 In The Bronx, take [4] trains.
@@ -14,7 +16,7 @@ Between Queens and Manhattan, take [E][R] trains.
 Between Manhattan and Brooklyn, take [J][N][Q][R] trains.
 
 Note: At this time:
-[B] train service is concluding for the evening.
+[B] train service has concluded for the evening.
 [M] train service runs between Delancey St-Essex St and Middle Village-Metropolitan Av.</div><div class="line-alert"><p>In Brooklyn, Coney Island-bound [F] skips <b>Avenue I</b>, <b>Bay Pkwy</b>, <b>Avenue N</b> and <b>Avenue P</b></p>For service to these stations, take the [F] to Kings Hwy and transfer to a Manhattan-bound train.
 
 For service from these stations, take the [F] to 18 Av and transfer to a Coney Island-bound train.
