--- a/_includes/7-status.html
+++ b/_includes/7-status.html
@@ -2,7 +2,9 @@
 
 For service between Flushing-Main St and 74 St-Broadway, consider nearby Q48 or Q66 bus service.
 
-For service between Queens and Manhattan, consider [E][F][M][N][R][W] trains.</div><div class="line-alert"><p>In Queens, Flushing-bound [7] skips <b>82 St-Jackson Hts</b> and <b>111 St</b></p>Use nearby 74 St-Broadway, 90 St-Elmhurst Av, 103 St-Corona Plaza or Mets-Willets Point stations.
+For service between Queens and Manhattan, consider [E][F][M][N][R][W] trains.
+
+Long Island Rail Road is accommodating subway riders at no additional cost at Flushing Main St, Woodside, Penn Station, and Grand Central in both directions.</div><div class="line-alert"><p>In Queens, Flushing-bound [7] skips <b>82 St-Jackson Hts</b> and <b>111 St</b></p>Use nearby 74 St-Broadway, 90 St-Elmhurst Av, 103 St-Corona Plaza or Mets-Willets Point stations.
 
 Additional travel alternatives:
 For service to 82 St-Jackson Hts, take the [7] to 90 St-Elmhurst Av and transfer to a Manhattan-bound train.
